# Capstone-Project

./: .gitattributes  .gitignore  README.md  architecture-deployment-options.md
ai-api/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  build_cpp.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
ai-api/Training-Images/face_bib_detection/: classes.yaml
ai-api/benchmarks/: bench_cpp_vs_python.py
ai-api/docs/: CLAUDE.md  Implementation-Plan(1).md  README.md  api-integration-guide.md  api-reference.md  architecture.md  audit-suggestions.md  blur-audit-and-face-bib-roadmap.md  cpp-integration.md  deep-audit-report.md  deployment.md  feature-analysis-report.md  folder-structure.md  integration-architecture.md  integration-contracts.md  maintenance-guide.md  phase-plan-face-bibnumber-training.md  phase-plan-for-blur-detection-training.md  phase-plan.md  production-readiness-rescan-2.md  production-readiness-rescan-3.md  rescan-audit-report.md  security.md  setup-guide.md  tech-stack.md  training-guide-bib.md  training-guide-face-bib.md
ai-api/scripts/: auto_annotate_face_bib.py  backup_db.sh  benchmark.py  download_models.py  export_bib_detector.py  export_blur_classifier.py  export_face_bib_detector.py  extract_bib_labels.py  prepare_blur_dataset.py  seed_db.py  train_bib_detector.py  train_blur_classifier.py  train_face_bib_detector.py
ai-api/src/: config.py  dependencies.py  main.py
ai-api/src/cpp/: bindings.cpp  blur_ops.cpp  blur_ops.h  face_ops.cpp  face_ops.h  preprocess_ops.cpp  preprocess_ops.h
ai-api/src/db/: models.py  session.py  sync_session.py
ai-api/src/middleware/: auth.py  cors.py  rate_limit.py  request_id.py
ai-api/src/ml/: registry.py
ai-api/src/schemas/: bibs.py  blur.py  common.py  faces.py  jobs.py  webhooks.py
ai-api/src/services/: bib_service.py  blur_service.py  (+4 more)
ai-api/tests/: conftest.py  test_batch_endpoints.py  test_bib_endpoint.py  test_bib_recognizer.py  test_blur_classifier.py  test_blur_detector.py  test_blur_endpoint.py  test_cpp_extension.py  test_face_endpoints.py  test_face_matcher.py
(+1671 files in other folders)
